# human-face-emotions

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  models.dvc  outputs.dvc  pyproject.toml
configs/: config.yaml
configs/logging/: mlflow.yaml
configs/model/: cnn.yaml
configs/training/: default.yaml  testing_2_epochs.yaml
human_face_emotions/: __init__.py  infer.py  train.py  train_with_mlflow.py
human_face_emotions/modules/: __init__.py  faces_dataset.py  infer_dataset.py  model.py
notebooks/: faces.ipynb
outputs/2025-12-27/04-34-23/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-27/04-39-40/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-27/04-53-16/.hydra/: hydra.yaml
outputs/2025-12-27/04-55-55/.hydra/: hydra.yaml
outputs/2025-12-27/04-57-11/.hydra/: hydra.yaml
outputs/2025-12-27/04-57-32/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-12-27/05-00-01/.hydra/: config.yaml  hydra.yaml
